# ore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
Modules/: CMakeLists.txt  math.cpp  time.cpp
REPL/: REPLGlobalObjectShape.cpp  REPLGlobalObjectShape.h  ScriptGlobalObjectShape.cpp  ScriptGlobalObjectShape.h  main.cpp
Source/: AST.cpp  AST.h  Config.h.in  Forward.h  Interpreter.cpp  Interpreter.h  Ore.h  SourceRange.h
Source/GC/: Cell.cpp  Cell.h  Heap.cpp  Heap.h  HeapBlock.cpp  HeapBlock.h
Source/Parser/: Lexer.cpp  Lexer.h  RDParser.cpp  RDParser.h  Token.cpp  Token.h
Source/Runtime/: ArrayObject.cpp  ArrayObject.h  ArrayObjectShape.cpp  ArrayObjectShape.h  BooleanObject.h  ExceptionObject.cpp  ExceptionObject.h  FFIObject.cpp  FunctionObject.cpp  FunctionObject.h  GlobalObject.cpp  GlobalObject.h  GlobalObjectShape.cpp  GlobalObjectShape.h  NativeFunction.cpp  NativeFunction.h  NumberObject.cpp  NumberObject.h  NumberObjectShape.cpp  NumberObjectShape.h  Object.cpp  Object.h  PrimitiveString.h  PropertyKey.h  Result.h  StringObject.h  Value.cpp  Value.h
Tests/: main.cpp
Tests/FFI_tests/: main.cpp
cmake/: FindCCache.cmake
src/: AST.cpp  AST.h  Forward.h  Interpreter.cpp  Interpreter.h  Ore.h  test.cpp
src/GC/: Cell.cpp  Cell.h  Heap.cpp  Heap.h  HeapBlock.cpp  HeapBlock.h
src/Runtime/: ArrayObject.cpp  ArrayObject.h  BooleanObject.h  FFIObject.cpp  FFIObject.h  FunctionObject.h  GlobalObject.cpp  GlobalObject.h  NativeFunction.h  NumberObject.h  Object.cpp  Object.h  PrimitiveString.h  PropertyKey.h  StringObject.cpp  StringObject.h  Value.cpp  Value.h
tests/: main.cpp
tests/FFI_tests/: main.cpp
